MD Settings: Add tooltip for Old Image in Change Picture.

The tooltip is now "Existing photo from camera or file", as the code
does not track where it came from.

In the old Options version, it said "Photo from internal camera" in the
first preview icon immediately after taking it, but not on subsequent
openings of the dialog.

BUG=666671
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2534003002
Cr-Commit-Position: refs/heads/master@{#435328}

Former-commit-id: eab2da39cd9f081c229a29bdaa16fc95b967a10b